--- a/public/index.html
+++ b/public/index.html
@@ -35,7 +35,7 @@
 <!-- font awesome -->
 
 
-    <title>React App</title>
+    <title>safeHike</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
